Complete screen - Back button below panel - alignment (temporary fix)

--- a/web/css/fc_styles.css
+++ b/web/css/fc_styles.css
@@ -1510,3 +1510,9 @@ i.documents-complete {
 	border: 1px solid #cccccc;
 }
 
+/*a class called upon a condition on the complete screen - 
+this is to nudge the "back to" button into position*/
+.nudge {
+	margin-left:15px;
+	margin-top: 10px;
+}
